--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>Webpack Sample Project</title>
+    <title>Toy Robot</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
 </head>
+
 <body>
-<div id='root'>
+    <div id='root'>
 
 
-</div>
+    </div>
 
 
 </body>
+
 </html>
